## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2002-2008 G.J. Paulissen
##
## This library is free software; you can redistribute it and/or
## modify it under the terms of the GNU Lesser General Public
## License as published by the Free Software Foundation; either
## version 2.1 of the License, or (at your option) any later version.
##
## This library is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## Lesser General Public License for more details.
##
## You should have received a copy of the GNU Lesser General Public
## License along with this library; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

sql_scripts      = 0001.TYPE_SPEC.EPC_CLNT_OBJECT.sql \
								 	 R__0002.PACKAGE_SPEC.EPC.sql \
									 R__0003.PACKAGE_SPEC.EPC_SRVR.sql \
									 R__0004.PACKAGE_SPEC.EPC_CLNT.sql \
									 R__0005.TYPE_BODY.EPC_CLNT_OBJECT.sql \
									 R__0006.PACKAGE_BODY.EPC_SRVR.sql \
									 R__0007.PACKAGE_BODY.EPC_CLNT.sql \
									 V20221203171807.0001__TYPE_SPEC.EPC_CLNT_OBJECT.sql \
									 install.sql \
									 uninstall.sql

noinst_DATA      = $(sql_scripts)

EXTRA_DIST       = $(sql_scripts)

